--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,6 +33,9 @@ jobs:
 
     - name: Install dotnet-ef tool
       run: dotnet tool install --global dotnet-ef
+
+    - name: Update database
+      run: dotnet ef database update --connection "Data Source=./publish/DFApp.db"
       
     - name: Publish project
       run: dotnet publish --configuration Release --framework net8.0 --output ./publish
