--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,8 +43,14 @@ jobs:
     - name: Create publish directory
       run: mkdir -p ./publish
 
-    - name: Update database
-      run: dotnet ef database update --connection "Data Source=/home/runner/work/DFApp/DFApp/publish/DFApp.db" --project ./src/DFApp.EntityFrameworkCore/DFApp.EntityFrameworkCore.csproj
+    - name: Modify appsettings.json for DbMigrator
+      run: |
+        jq '.ConnectionStrings.Default = "/home/runner/work/DFApp/DFApp/publish/DFApp.db"' ./src/DFApp.DbMigrator/appsettings.json > ./src/DFApp.DbMigrator/appsettings.tmp.json
+        mv ./src/DFApp.DbMigrator/appsettings.tmp.json ./src/DFApp.DbMigrator/appsettings.json
+      shell: bash
+
+    - name: Run DbMigrator
+      run: dotnet run --project ./src/DFApp.DbMigrator
       
     - name: Publish project
       run: dotnet publish --configuration Release --framework net8.0 --output ./publish
