--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -109,7 +109,7 @@ jobs:
       shell: bash
 
     - name: Run DbMigrator
-      run: dotnet run --project ./src/DFApp.DbMigrator
+      run: dotnet run --project ./src/DFApp.DbMigrator/DFApp.DbMigrator.csproj
       
     - name: Publish project
       run: dotnet publish --configuration Release --framework net8.0 --output ./publish
