--- a/.gitignore
+++ b/.gitignore
@@ -283,3 +283,6 @@ src/DF.Telegram.Blazor.Server.Tiered/Logs/*
 /src/DF.Telegram.Web/VueApp/待处理问题.md
 /src/DF.Telegram.Web/publish.sh
 /src/DFApp.Web/Logs/logs.txt
+src/DFApp.Web/DFApp.db
+src/DFApp.Web/DFApp.db-shm
+src/DFApp.Web/DFApp.db-wal
