--- a/src/DFApp.Domain.Shared/DFApp.Domain.Shared.csproj
+++ b/src/DFApp.Domain.Shared/DFApp.Domain.Shared.csproj
@@ -3,7 +3,7 @@
 	<Import Project="..\..\common.props" />
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;netstandard2.1;net8.0</TargetFrameworks>
+		<TargetFrameworks>net9.0</TargetFrameworks>
 		<Nullable>enable</Nullable>
 		<RootNamespace>DFApp</RootNamespace>
 		<GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
@@ -11,19 +11,19 @@
 
 	<ItemGroup>
 		<PackageReference Include="StarkSoftProxy" Version="1.6.0" />
-		<PackageReference Include="Volo.Abp.BlobStoring.Database.Domain.Shared" Version="8.3.2" />
-		<PackageReference Include="Volo.CmsKit.Domain.Shared" Version="8.3.2" />
+		<PackageReference Include="Volo.Abp.BlobStoring.Database.Domain.Shared" Version="9.0.4" />
+		<PackageReference Include="Volo.CmsKit.Domain.Shared" Version="9.0.4" />
 		<PackageReference Include="WTelegramClient" Version="4.2.2" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
-		<PackageReference Include="System.Text.Json" Version="8.0.4" />
-		<PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="8.3.2" />
-		<PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="8.3.2" />
-		<PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="8.3.2" />
-		<PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="8.3.2" />
-		<PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="8.3.2" />
-		<PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="8.3.2" />
-		<PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="8.3.2" />
-		<PackageReference Include="Volo.Abp.OpenIddict.Domain.Shared" Version="8.3.2" />
+		<PackageReference Include="System.Text.Json" Version="9.0.2" />
+		<PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="9.0.4" />
+		<PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="9.0.4" />
+		<PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="9.0.4" />
+		<PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="9.0.4" />
+		<PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="9.0.4" />
+		<PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="9.0.4" />
+		<PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="9.0.4" />
+		<PackageReference Include="Volo.Abp.OpenIddict.Domain.Shared" Version="9.0.4" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -32,7 +32,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="8.0.4" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
