--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -4,8 +4,6 @@
 name: .NET
 
 on:
-  push:
-    branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
 
@@ -22,7 +20,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: 9.0.x
     # - name: Restore dependencies
     #   run: dotnet restore
     # - name: Build
@@ -45,25 +43,50 @@ jobs:
     - name: Create publish directory
       run: mkdir -p ./publish
 
-    - name: Modify appsettings.json for DbMigrator
-      run: |
-        jq '.ConnectionStrings.Default = "Data Source=/home/runner/work/DFApp/DFApp/publish/DFApp.db"' ./src/DFApp.DbMigrator/appsettings.json > ./src/DFApp.DbMigrator/appsettings.tmp.json
-        mv ./src/DFApp.DbMigrator/appsettings.tmp.json ./src/DFApp.DbMigrator/appsettings.json
-      shell: bash
+    # - name: Modify appsettings.json for DbMigrator
+    #   run: |
+    #     jq '.ConnectionStrings.Default = "Data Source=/home/runner/work/DFApp/DFApp/publish/DFApp.db"' ./src/DFApp.DbMigrator/appsettings.json > ./src/DFApp.DbMigrator/appsettings.tmp.json
+    #     mv ./src/DFApp.DbMigrator/appsettings.tmp.json ./src/DFApp.DbMigrator/appsettings.json
+    #   shell: bash
 
-    - name: Run DbMigrator
-      run: |
-        cd ./src/DFApp.DbMigrator/
-        dotnet run
-      shell: bash
+    # - name: Run DbMigrator
+    #   run: |
+    #     cd ./src/DFApp.DbMigrator/
+    #     dotnet run
+    #   shell: bash
       
     - name: Publish project
       run: |
         cd ./src/DFApp.Web/
-        dotnet publish --configuration Release --framework net8.0 --output ../../publish
+        dotnet publish --configuration Release \
+          --framework net9.0 \
+          --runtime linux-x64 \
+          --no-self-contained \
+          --output ../../publish
 
-    - name: Upload build artifact
-      uses: actions/upload-artifact@v3
+    - name: Zip publish files
+      run: |
+        cd publish
+        zip -r ../DFApp-linux-x64.zip .
+      shell: bash
+
+    - name: Create Release
+      uses: actions/create-release@v1
+      id: create_release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: dotnet-build-artifacts
-        path: ./publish
+        tag_name: preview-${{ github.run_number }}
+        release_name: Preview Release ${{ github.run_number }}
+        draft: false
+        prerelease: true
+
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./DFApp-linux-x64.zip
+        asset_name: DFApp-linux-x64.zip
+        asset_content_type: application/zip
