--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches: [ "master" ]
 
+# 添加权限配置
+permissions:
+  contents: write
+
 jobs:
   build:
 
@@ -71,22 +75,12 @@ jobs:
       shell: bash
 
     - name: Create Release
-      uses: actions/create-release@v1
-      id: create_release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
       with:
         tag_name: preview-${{ github.run_number }}
-        release_name: Preview Release ${{ github.run_number }}
+        name: Preview Release ${{ github.run_number }}
         draft: false
         prerelease: true
-
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
+        files: DFApp-linux-x64.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./DFApp-linux-x64.zip
-        asset_name: DFApp-linux-x64.zip
-        asset_content_type: application/zip
