--- a/src/DFApp.Application/DFApp.Application.csproj
+++ b/src/DFApp.Application/DFApp.Application.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="9.3.6" />
     <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="9.3.6" />
     <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="9.3.6" />
+    <PackageReference Include="BencodeNET" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
